auth_token generation

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -27,7 +27,7 @@
     "src/**/*.ts",
     "src/**/*.js",
     "src/**/*.json"
-  ],
+, "src/database/knexfile.ts"  ],
   "exclude": [
     "node_modules",
     "<node_internals>/**",
