--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "knex:migrate:make": "knex --knexfile src/database/knexfile.ts migrate:make -x ts",
     "knex:migrate:latest": "knex --knexfile src/database/knexfile.ts migrate:latest",
