--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,8 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^8.8.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
